@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-09-08T01:46:13Z",
+  "timestamp" : "2022-09-08T08:20:00Z",
   "count_outdated" : 502,
   "uniques_outdated" : 291,
   "count" : 529,
-  "uniques" : 306,
+  "uniques" : 307,
   "clones" : [
     {
       "timestamp": "2022-08-25T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -86,6 +86,13 @@
       "timestamp": "2022-09-07T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
