@@ -1,3 +1,11 @@
+2022-09-08T08:20:00Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3013541001
+* notice: last 14d: unq all: 5 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 291 502 / 306 529
+* notice: next accum: outdated-unq outdated-all / unq all: 291 502 / 307 529
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-08-25 2022-09-08]
+
 2022-09-08T01:46:13Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3011923358
 * notice: last 14d: unq all: 5 27
